# ChaosEquationSimulator

./: .gitignore  CMakeLists.txt  README.md
include/: equations.hpp  particle.hpp  shader_loader.hpp
shaders/: fragment.glsl  particle_vertex.glsl
src/: equations.cpp  main.cpp  particle.cpp  shader_loader.cpp
